<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/big_padding">

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/new_contact_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/big_padding"
        android:hint="@string/contact_name_hint"
        android:inputType="textPersonName" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/new_contact_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/big_padding"
        android:hint="@string/contact_phone_hint"
        android:inputType="phone" />

    <Button
        android:id="@+id/new_contact_add_btn"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add" />
</LinearLayout>