<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <RelativeLayout
        android:id="@+id/contact_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ddd"
        android:padding="@dimen/padding">

        <TextView
            android:id="@+id/contact_phone_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_label"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/contact_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/contact_phone_label"
            tools:text="0901 000 111" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/contact_header">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/contact_order_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/view_order" />

        <TextView
            android:id="@+id/order_empty_list_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/big_padding"
            android:text="@string/empty_list"
            android:textSize="@dimen/text_middle"
            tools:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/contact_not_selected"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_transparent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:text="@string/pick_contact"
            android:textSize="@dimen/text_middle" />
    </RelativeLayout>
</RelativeLayout>